# python-grpc

./: .gitignore  pyproject.toml
protos/: person.proto
src/: client.py  main.py  person_pb2.py  person_pb2.pyi  person_pb2_grpc.py  route_guide_pb2.py  route_guide_pb2.pyi  route_guide_pb2_grpc.py  server.py
tests/: test_proto.py
